--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,24 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* bs */
+
+.app {
+  text-align: center;
+  width: 500px;
+  height: 600px;
+  background-color: black;
+  color: white;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.timer {
+  font-size: 30px;
+  margin-bottom: 30px;
+}
+
+.tasktimer {
+  margin-left: 25%;
+  float: left;
+}
+
+.breaktimer {
+  margin-right: 25%;
+  float: right;
 }
